--- a/sample-tvm-backend-usage/sample_usage.ipynb
+++ b/sample-tvm-backend-usage/sample_usage.ipynb
@@ -54,6 +54,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install boto3 --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import boto3\n",
     "\n",
     "qbiz = boto3.client(\"qbusiness\", region_name=\"<region>\", **credentials)\n",
